fix light/dark mode switch

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,7 @@
 <div class="navbar" role="navigation">
   <nav class="menu">
     <input type="checkbox" id="menu-trigger" class="menu-trigger" />
+    <script src="/assets/js/main.js" defer="defer"></script>
     <label for="menu-trigger">
       <span class="menu-icon">
         <svg
