description and book posts

--- a/_includes/author.html
+++ b/_includes/author.html
@@ -4,6 +4,13 @@
     src="{{ site.author.avatar }}"
     alt="{{ site.author.username }}"
   />
-  <h2 class="author-name">{{ site.author.name }}</h2>
-  <p class="author-bio">{{ site.author.bio }}</p>
+</br>
+</br>
+
+  <h1 class="author-name">{{ site.author.name }}</h1>
+  <p>Welcome to my personal corner of the internet. This website serves as my portfolio and <a href="https://joelhooks.com/digital-garden">digital garden</a>. A place where I can experiment with technologies and share my things that I am interest in.</p>
+  </br>
+  <h2>A Bit About Me ✨</h2>
+  <p>I am a statistician in the making at the Univeristy of Waterloo. After a brief and meaningful internership as a frontend developer, I found a new passion for crafting well made, human centered software design.</p>
+  <p>When im not deep in the code mines, I am runner in trainning, book worm and coffee enthousiast.</p>
 </div>
