--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,24 @@ layout: default
 home: true
 ---
 
+<h2 class="posts-item-note" aria-label="Books!">Books That I'm Reading Now</h2>
+<div class="book-list">
+  {% assign sorted-posts = site.posts | where: "tag","book" %} {% for post in
+  sorted-posts limit: 5 %}
+  <div class="book">
+    <a href="{{ post.goodreads }}">
+      <img
+        class="book-cover"
+        src="/assets/img/book-covers/{{ post.image }}"
+        alt="{{post.title}}"
+      />
+      <p class="book-title">{{ post.title | escape }}</p>
+      <p class="book-author">{{post.book-author | escape }}</p>
+    </a>
+  </div>
+  {% endfor %}
+</div>
+
 <!-- <h3 class="posts-item-note" aria-label="Recent Posts">Recent Posts</h3>
 {%- for post in site.posts limit: site.number_of_posts -%}
 <article class="post-item">
@@ -10,5 +28,5 @@ home: true
   <h4 class="post-item-title">
     <a href="{{ post.url }}">{{ post.title | escape }}</a>
   </h4>
-</article> -->
-{%- endfor -%}
+</article>
+{%- endfor -%} -->
