--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,11 @@
 <footer class="footer">
-  <a class="footer_item" href="/assets/docs/resume.pdf">resume</a>
-  <a class="footer_item" href="https://www.github.com/shawnsui">github</a>
-  <a class="footer_item" href="/feed.xml">rss</a>
+  <a class="footer_item" href="https://www.github.com/shawnsui" target="_blank"
+    >github</a
+  >
+  <a class="footer_item" href="/assets/docs/resume.pdf" target="_blank"
+    >resume</a
+  >
+  <!-- <a class="footer_item" href="/feed.xml">rss</a> -->
   <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
 </footer>
 <script src="/assets/js/main.js" defer="defer"></script>
