--- a/_sass/klise/_base.scss
+++ b/_sass/klise/_base.scss
@@ -9,7 +9,7 @@
 
 .notransition {
   -webkit-transition: none;
-  -moz-transition: none; 
+  -moz-transition: none;
   -ms-transition: none;
   -o-transition: none;
   transition: none;
@@ -75,6 +75,10 @@ figure,
 %vertical-rhythm {
   margin-top: $spacing-full - 20;
   margin-bottom: $spacing-full - 20;
+}
+
+p {
+  text-align: left;
 }
 
 // strong | bold
