--- a/_includes/author.html
+++ b/_includes/author.html
@@ -12,5 +12,5 @@
   </br>
   <h2>A Bit About Me ✨</h2>
   <p>I am a statistician in the making at the Univeristy of Waterloo. After a brief and meaningful internership as a frontend developer, I found a new passion for crafting well made, human centered software design.</p>
-  <p>When im not deep in the code mines, I am runner in trainning, book worm and coffee enthousiast.</p>
+  <p>When im not deep in the code mines, I focused on becoming a runner, reading while sipping on coffee or cooking up a storm.</p>
 </div>
