--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,9 @@
   <a class="footer_item" href="https://www.github.com/shawnsui" target="_blank"
     >github</a
   >
+  <a class="footer_item" href="mailto:{{site.author.email}}" target="_blank"
+    >email</a
+  >
   <a class="footer_item" href="/assets/docs/resume.pdf" target="_blank"
     >resume</a
   >
