--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -253,6 +253,9 @@
           >home</a
         >
         {%- endif -%}
+        <a class="menu-link" href="mailto:{{site.author.email}}" target="_blank"
+          >email</a
+        >
         <a class="menu-link" href="/assets/docs/resume.pdf" target="_blank"
           >resume</a
         >
