book page + update reading list

--- a/_includes/author.html
+++ b/_includes/author.html
@@ -8,9 +8,9 @@
 </br>
 
   <h1 class="author-name">{{ site.author.name }}</h1>
-  <p>Welcome to my personal corner of the internet. This website serves as my portfolio and <a href="https://joelhooks.com/digital-garden">digital garden</a>. A place where I can experiment with technologies and share things that I am interest in.</p>
+  <p>Welcome to my personal corner of the internet. This website serves as my portfolio and <a href="https://joelhooks.com/digital-garden">digital garden</a>. A place where I can experiment with technologies and share my thoughts and hobbies that I am interest in.</p>
   </br>
   <h2>A Bit About Me ✨</h2>
-  <p>I am a statistician in the making at the Univeristy of Waterloo. After a meaningful internership as a frontend developer, I found a new passion for crafting well made, human centered software design.</p>
-  <p>When im not deep in the code mines, I'm training to become a better runner, reading while sipping on drip coffee or cooking up a storm.</p>
+  <p>I am a statistician in the making at the Univeristy of Waterloo. After a meaningful internership as a frontend developer, I found a new passion for crafting well made, human centered software.</p>
+  <p>When im not deep in the code mines, I'm training to become a better runner, reading while sipping on pour over coffee or cooking/baking up a storm.</p>
 </div>
