--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 <footer class="footer">
   <a class="footer_item" href="https://www.github.com/shawnsui" target="_blank"
-    >github</a
+    >Github</a
   >
   <a class="footer_item" href="mailto:{{site.author.email}}" target="_blank"
-    >email</a
+    >Email</a
   >
   <a class="footer_item" href="/assets/docs/resume.pdf" target="_blank"
-    >resume</a
+    >Resume</a
   >
-  <!-- <a class="footer_item" href="/feed.xml">rss</a> -->
+  <a class="footer_item" href="/feed.xml">RSS</a>
   <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
 </footer>
 <script src="/assets/js/main.js" defer="defer"></script>
