--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -250,16 +250,11 @@
         >
         {%- endif -%} {%- endif -%} {%- endfor -%} {%- else -%}
         <a class="menu-link {% if url == '/' %}active{% endif %}" href="/"
-          >home</a
+          >Home</a
         >
         {%- endif -%}
-        <a class="menu-link" href="mailto:{{site.author.email}}" target="_blank"
-          >email</a
-        >
-        <a class="menu-link" href="/assets/docs/resume.pdf" target="_blank"
-          >resume</a
-        >
-        <!-- <a class="menu-link rss" href="/feed.xml">
+      
+        <a class="menu-link rss" href="/feed.xml">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="17"
@@ -278,7 +273,7 @@
               d="M48,48v86.56c185.25,0,329.22,144.08,329.22,329.44H464C464,234.66,277.67,48,48,48Z"
             />
           </svg>
-        </a> -->
+        </a>
       </div>
     </div>
   </nav>
