--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -33,8 +33,9 @@ layout: compress
       <div class="not-found">
         <div class="container">
           <div class="title">404</div>
-          <p class="phrase">😕 Hmm... Seems you lost from my journey.</p>
-          <a class="solution" href="{{ site.url }}">back home</a>
+          <h2 class="phrase">😕 Hmm... Seems like this page doesn't exist.</h2>
+          </br>
+          <a class="solution" href="/">Return Home</a>
         </div>
       </div>
     </main>  
